--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </div>
               <div class="modal-body">
                 <div id="form-messages"></div>
-                <form action="POST" id="ajax-contact" class="text-left" action="https://formspree.io/juanpernu.gcba@gmail.com">
+                <form method="POST" class="text-left" action="https://formspree.io/juanpernu.gcba@gmail.com">
                     <div class="field">
                         <label for="name">Decime tu nombre</label>
                         <input type="text" name="name" required name="nombre" placeholder="Tu nombre acá">
