--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Ponji</p>
     </div>
     <div class="text-left padding-box">
-        <h1>Nipon's <br> After <br> Office</h1>
+        <h1>Pnj's <br> After <br> Office</h1>
         <div class="spacer"></div>
         <div class="data">
             <p>¿Donde?</p>
