--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </form>
               </div>
               <div class="modal-footer">
-                <input type="submit" value="Estamos ready" class="btn btn-primary">
+                <input id="save" type="submit" value="Estamos ready" class="btn btn-primary">
                 <!-- <button id="save" type="submit" class="btn btn-primary">Estamos ready</button> -->
               </div>
             </div>
