--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
                 <form method="POST" class="text-left" action="https://formspree.io/juanpernu.gcba@gmail.com">
                     <div class="field">
                         <label for="name">Decime tu nombre</label>
-                        <input type="text" name="name" required name="nombre" placeholder="Tu nombre acá">
+                        <input type="text" name="name" required placeholder="Tu nombre acá">
                     </div>
                     <div class="field">
                         <label for="secretary">¿De qué subsecretaría?</label>
-                        <input type="text" name="secretary" required name="subsecretaria" placeholder="Subsecretaría">
+                        <input type="text" name="secretary" required placeholder="Subsecretaría">
                     </div>
                     <div class="label">
                         <label for="direction">¿Y qué dirección?</label>
-                        <input type="text" name="direction" required name="DG" placeholder="Dirección general">
+                        <input type="text" name="direction" required placeholder="Dirección general">
                     </div>
                     <input type="hidden" name="_next" value="index.html" />
                     <input type="hidden" name="_subject" value="Nipon's After" />
