--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               </div>
-              <form method="POST" class="text-left" action="https://formspree.io/juanpernu.gcba@gmail.com">  
-              <div class="modal-body">
-                <div id="form-messages"></div>
-                
+              <form method="POST" class="text-left" action="https://formspree.io/juanpernu.gcba@gmail.com">
+                  <div class="modal-body">
+                    <div id="form-messages"></div>
                     <div class="field">
                         <label for="name">Decime tu nombre</label>
                         <input type="text" name="name" required placeholder="Tu nombre acá">
@@ -58,14 +57,12 @@
                         <label for="direction">¿Y qué dirección?</label>
                         <input type="text" name="direction" required placeholder="Dirección general">
                     </div>
-                    <input type="hidden" name="_next" value="index.html" />
+                    <input type="hidden" name="_next" value="https://juanpernu.github.io/index.html" />
                     <input type="hidden" name="_subject" value="Nipon's After" />
-                
-              </div>
-              <div class="modal-footer">
-                <input id="save" type="submit" value="Estamos ready" class="btn btn-primary">
-                <!-- <button id="save" type="submit" class="btn btn-primary">Estamos ready</button> -->
-              </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="submit" id="save" class="btn btn-primary">Estamos ready</button>
+                  </div>
               </form>
             </div>
           </div>
