--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <input type="hidden" name="_subject" value="Nipon's After" />
                   </div>
                   <div class="modal-footer">
-                    <button type="submit" id="save" class="btn btn-primary">Estamos ready</button>
+                    <button type="submit" target="_blank" id="save" class="btn btn-primary">Estamos ready</button>
                   </div>
               </form>
             </div>
