--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <label for="direction">¿Y qué dirección?</label>
                         <input type="text" name="direction" required placeholder="Dirección general">
                     </div>
-                    <input type="hidden" name="_next" value="https://juanpernu.github.io/index.html" />
+                    <input type="hidden" name="_next" value="juanpernu.github.io/pnj_after/" />
                     <input type="hidden" name="_subject" value="Nipon's After" />
                   </div>
                   <div class="modal-footer">
