added add to calendar button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             <p>¿Donde?</p>
             <a href="https://www.google.com.ar/maps/place/Beer+Patagonia+-+Refugio+Don+Anselmo/@-34.6232188,-58.3754788,16z/data=!4m17!1m11!4m10!1m3!2m2!1d-58.3715306!2d-34.6259292!1m5!1m1!1s0x95bccb2cb1708ad7:0xc76603010cccf5b6!2m2!1d-58.372215!2d-34.62044!3m4!1s0x95bccb2cb1708ad7:0xc76603010cccf5b6!8m2!3d-34.62044!4d-58.372215" target="_self"><small>Patagonia Beer Bar</small></a>
             <p>¿Cuando?</p>
-            <small>Miércoles 24 de Mayo</small>
+            <small>Miércoles 24 de Mayo</small> <br>
+
+           <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Pnj's+After&dates=20170524/20170526&details=Salimos+desde+Lezama+;)&location=&output=xml" target="_blank" rel="nofollow" class="calendar">Agendar en calendar</a>
+
+
         </div>
         <p class="question">¿Vas a venir venir?</p>
         <div class="confirm">
